fix: align in commercial services block

--- a/src/pages/styles.module.scss
+++ b/src/pages/styles.module.scss
@@ -179,7 +179,7 @@
 
     &::before {
       content: url('/img/small-plus.svg');
-      top: 8px;
+      top: 5px;
       left: -32px;
       background-color: map-get($green, success);
     }
